# 3-liga-ml-predictor

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DATA_LEAKAGE_FIX_REPORT.md  GEMINI.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  __main__.py  alembic.ini  data_research.md  debug_player_scraping.py  debug_urls.py  inspect_html.py  main.py  predict.py  pyproject.toml  requirements.txt  run_kicktipp_predictor.py  test_full_collection.py  test_historical_scraper.py  verify_fix.py  verify_historical_vs_current.py  verify_multiple_teams.py  verify_player_values.py
.claude/: settings.local.json
.vercel/: project.json
alembic/: env.py
alembic/versions/: 936ca3bfdc87_initial_migration_from_schema.py
config/: fbref_team_mapping.json  fotmob_team_mapping.json  sofascore_team_mapping.json  stadium_locations.json  team_mappings.json  transfermarkt_urls.json  transfermarkt_urls_new.json  transfermarkt_urls_old_backup.json
data/processed/: 3liga_full.csv  3liga_ml_dataset_full.csv  3liga_ml_dataset_test.csv  3liga_ml_dataset_train.csv  3liga_ml_dataset_val.csv  3liga_test.csv  3liga_train.csv  3liga_val.csv  dataset_summary.txt  feature_documentation.txt
database/: 3liga.db-shm  db_manager.py  schema.sql
examples/: train_model_example.py
frontend/: index.html  package-lock.json  package.json
kicktipp_predictor/: __init__.py  analysis.py  config.py  data_loader.py  evaluation.py  main.py  real_world_simulation.py  season_analysis.py  validation.py
scripts/: check_data_quality.py  cleanup_duplicate_odds.py  comprehensive_data_analysis.py  data_exploration.py  diagnose_missing_matchdays.py  finalize_dataset.py  fix_missing_results.py  generate_team_urls.py  rerun_fbref_2018.py  run_fbref_collection.py  validate_team_ids.py
(+137 files in other folders)
