[tool.poetry]
name = "liga-predictor"
version = "1.0.0"
description = "3. Liga Match Prediction System with ML and comprehensive data collection"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "liga_predictor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
# Core dependencies
pandas = ">=2.0.0"
numpy = ">=1.24.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=4.9.0"

# Database
sqlalchemy = ">=2.0.0"

# Data validation and testing
pydantic = ">=2.0.0"

# Web scraping
selenium = ">=4.15.0"
fake-useragent = ">=1.4.0"
undetected-chromedriver = ">=3.5.0"
setuptools = ">=69.0.0"

# Scheduling and automation
schedule = ">=1.2.0"
python-dotenv = ">=1.0.0"

# Rate limiting for API calls
ratelimit = ">=2.2.1"

# Logging and monitoring
loguru = ">=0.7.0"

# Data analysis and visualization
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"

# HTTP client with retry capabilities
tenacity = ">=8.2.0"

# Progress bars
tqdm = ">=4.66.0"

# Weather data sources
meteostat = ">=1.6.5"
wetterdienst = ">=0.50.0"

# Machine Learning
scikit-learn = ">=1.3.0"

# Modern CLI framework
typer = {extras = ["all"], version = ">=0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"

[tool.poetry.scripts]
liga-predictor = "liga_predictor.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
